--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,19 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/text_home"
+    <data>
+        <variable
+            name="viewModel"
+            type="com.raka.qtest.presentation.main.fragment.home.HomeViewModel" />
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/iv_home_top_heart"
+            android:layout_width="@dimen/iv_fr_home_like_size"
+            android:layout_height="@dimen/iv_fr_home_like_size"
+            android:layout_marginStart="@dimen/iv_fr_home_like_margin_start_top"
+            android:layout_marginTop="@dimen/iv_fr_home_like_margin_start_top"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_heart_unfill" />
+
+        <TextView
+            android:id="@+id/tv_application_status_search"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/tv_fr_home_search_height"
+            android:layout_marginStart="@dimen/tv_fr_home_search_margin_start"
+            android:layout_marginTop="@dimen/tv_fr_home_search_margin_top"
+            android:layout_marginEnd="@dimen/tv_fr_home_search_margin_end"
+            android:background="@drawable/bg_tv_rounded_white"
+            android:clickable="true"
+            android:drawableStart="@drawable/ic_search_black_24dp"
+            android:focusable="true"
+            android:hint="@string/search_products"
+            android:textSize="@dimen/tv_fr_home_search_text_size"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/iv_home_top_heart"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_home_category"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_home_top_heart"
+            app:adapter="@{viewModel}"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_home_products"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rv_home_category"
+            app:adapter="@{viewModel}"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
